--- a/Es palindromo/index.html
+++ b/Es palindromo/index.html
@@ -5,8 +5,7 @@
     <title>Palindromi!!!</title>
   </head>
   <body>
-    <div class="P">
-
+    <div id="inputword">
     </div>
     <script src="main.js"></script>
   </body>
